# Optibuild

./: .gitignore  ALGORITHM.md  ARCHITECTURE.md  CMakeLists.txt  PROJECT_REPORT.md  README.md  USER_GUIDE.md  app  baseline_metrics.txt  document  main.cpp  run.sh
analyzer/: build_optimizer.cpp  dependency_graph.cpp  dependency_graph.h  graph_builder.cpp  impact_analyzer.cpp  optibuild.cpp  optibuild_cli.cpp  optibuild_cli.h  optibuild_config.cpp  optibuild_config.h
frontend/: package-lock.json  package.json
frontend/public/: graph.json  output.json
frontend/src/: Dashboard.jsx  Graph.jsx  index.css
src/: main.cpp
src/auth/: auth.cpp  auth.h
src/billing/: billing.cpp  billing.h
src/database/: database.cpp  database.h  db.cpp  db.h
src/utils/: utils.cpp  utils.h
tests/: test_main.cpp
